--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <link rel="icon" type="image/png" href="favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons/favicon.ico?v=2">
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
+  <meta name="msapplication-config" content="../favicons/browserconfig.xml">
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Jason Kim" />
+  <meta property="og:description" content="A product and UX design portfolio of works" />
+  <meta property="og:url" content="http://jasonkim.xyz/" />
+  <meta property="og:site_name" content="Jason Kim" />
+  <meta property="og:image" content="img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
 <script>
