add resume and remove the weird c that was on the medialets page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            </h1>
        </div>
        <ul class="show-second w-70-l fl-l list ph3 f4-ns mv3">
-           <li class="dib mr5-ns mr4"><a class="link bb white" href="https://www.linkedin.com/in/miknosaj/" target="_blank">résumé</a></li>
+           <li class="dib mr5-ns mr4"><a class="link bb white" href="img/jasonkim-resume.pdf" target="_blank">résumé</a></li>
            <li class="dib mr5-ns mr4"><a class="link bb white" href="http://instagram.com/kim.json" target="_blank">instagram</a></li>
            <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
        </ul>
