changing all instances of http to https to make all pages secure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Jason Kim" />
   <meta property="og:description" content="A product and UX design portfolio of works" />
-  <meta property="og:url" content="http://jasonkim.xyz/" />
+  <meta property="og:url" content="https://jasonkim.xyz/" />
   <meta property="og:site_name" content="Jason Kim" />
   <meta property="og:image" content="img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -41,7 +41,7 @@
        </div>
        <ul class="show-second w-70-l fl-l list ph3 f4-ns mv3">
            <li class="dib mr5-ns mr4"><a class="link bb white" href="img/jasonkim-resume.pdf" target="_blank">résumé</a></li>
-           <li class="dib mr5-ns mr4"><a class="link bb white" href="http://instagram.com/kim.json" target="_blank">instagram</a></li>
+           <li class="dib mr5-ns mr4"><a class="link bb white" href="https://instagram.com/kim.json" target="_blank">instagram</a></li>
            <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
        </ul>
    </div>
@@ -121,12 +121,12 @@
             </div>
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-blue no-underline" href="http://twitter.com/miknosaj">twitter</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-blue no-underline" href="https://twitter.com/miknosaj">twitter</a>
               </div>
             </div>
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-yellow no-underline" href="http://instagram.com/kim.json">instagram</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-yellow no-underline" href="https://instagram.com/kim.json">instagram</a>
               </div>
             </div>
             <div class="w-50 ph3">
