securing more pages

--- a/work/about.html
+++ b/work/about.html
@@ -45,12 +45,12 @@
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
-          Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a> in NYC
+          Previously @ <a class="link white bb" href="https://www.momentdesign.com/">Moment</a> in NYC
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
-          Graduated from<br class="dn db-l"> <a class="link white bb" href="http://rpi.edu/">Rensselaer Polytechnic Institute</a><br class="dn db-l"> Interdisciplinary Design
+          Graduated from<br class="dn db-l"> <a class="link white bb" href="https://rpi.edu/">Rensselaer Polytechnic Institute</a><br class="dn db-l"> Interdisciplinary Design
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
