--- a/work/loree.html
+++ b/work/loree.html
@@ -26,22 +26,22 @@
         ← back
       </a>
       <h2 class="show-first pb3 gray fs4 f4 f1-ns bb measure-narrow center">overview</h2>
-      <div class="show-first f5 measure-wide center"><a href="http://www.momentdesign.com/"><img class="w-40" src="../img/moment-logo-clear.png"></img></a></div>
+      <div class="show-first f5 measure-wide center"><a href="https://www.momentdesign.com/"><img class="w-40" src="../img/moment-logo-clear.png"></img></a></div>
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
-        I worked alongside a small team of designers at <a class="white" href="http://www.momentdesign.com/">Moment</a> from user research to product design. We designed for Voice UI’s and how they might be used to empower immigrant families and parents to raise their children to be multilingual in a culturally immersive home.
+        I worked alongside a small team of designers at <a class="white" href="https://www.momentdesign.com/">Moment</a> from user research to product design. We designed for Voice UI’s and how they might be used to empower immigrant families and parents to raise their children to be multilingual in a culturally immersive home.
       </p>
       <blockquote class="ph0 f4 f1-ns measure-narrow center">
         <p class="show-first fw9 lh-copy lh-title-ns">How might Voice UI's be used as tools for learning and celebrating the values of our diverse cultures?
         </p>
       </blockquote>
       <div class="f6 f5-ns lh-copy measure-wide center">
-        <a class="show-first" href="http://awards.ixda.org/blog/2017/the-2018-interaction-awards-shortlist/"><img class="w-30 w-20-ns" src="../img/2018-interaction-shortlist.png"></img></a>
+        <a class="show-first" href="https://awards.ixda.org/blog/2017/the-2018-interaction-awards-shortlist/"><img class="w-30 w-20-ns" src="../img/2018-interaction-shortlist.png"></img></a>
         <div class="show-second w- aspect-ratio aspect-ratio--16x9 mt0 mb4">
           <iframe src="https://player.vimeo.com/video/229846750?title=0&byline=0&portrait=0" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
       </div>
       <div class="show-first f6 f5-ns lh-copy measure-wide center">
-        <a class="f6 link dim ba ph3 pv2 mb2 dib light-blue" href="http://loree.momentdesign.com/">MEET LOREE</a>
+        <a class="f6 link dim ba ph3 pv2 mb2 dib light-blue" href="https://loree.momentdesign.com/">MEET LOREE</a>
         <a class="f6 link dim ba ph3 pv2 mb2 dib light-blue" href="https://medium.com/design-intelligence/why-a-better-future-for-voice-uis-matters-for-families-6a1e42d950c2">READ MY ARTICLE</a>
       </div>
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
