--- a/work/photography.html
+++ b/work/photography.html
@@ -63,7 +63,7 @@
               The basic material of photographs is not intrinsically beautiful. It’s not like ivory or tapestry or bronze or oil on canvas. You’re not supposed to look at the thing, you’re supposed to look through it. It’s a window. And everything behind it has got to be organized as a space full of stuff, even if it’s only air.
             </p>
             <p class="lh-title f5 b mt0">
-              - <a class="link white bb" href="http://www.laweekly.com/arts/talking-pictures-2146502">John Szarkowski</a>
+              - <a class="link white bb" href="https://www.laweekly.com/arts/talking-pictures-2146502">John Szarkowski</a>
             </p>
           </div>
           <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
