remove https because github pages doesnt secure pages with custom domains smh

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Jason Kim" />
   <meta property="og:description" content="A product and UX design portfolio of works" />
-  <meta property="og:url" content="https://jasonkim.xyz/" />
+  <meta property="og:url" content="http://jasonkim.xyz/" />
   <meta property="og:site_name" content="Jason Kim" />
   <meta property="og:image" content="img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
