--- a/work/about.html
+++ b/work/about.html
@@ -45,7 +45,7 @@
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
-          Previously @ <a class="link white bb" href="https://www.momentdesign.com/">Moment</a> in NYC
+          Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a> in NYC
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
