--- a/work/about.html
+++ b/work/about.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" href="../favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons../favicon.ico?v=2">
   <meta name="msapplication-config" content="../favicons/browserconfig.xml">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
