--- a/work/illustrations.html
+++ b/work/illustrations.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" href="../favicons/favicon-32x32.png?v=2" sizes="32x32">
   <link rel="icon" type="image/png" href="../favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons../favicon.ico?v=2">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
