--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <meta property="og:description" content="A product and UX design portfolio of works." />
   <meta property="og:url" content="http://jasonkim.xyz/" />
   <meta property="og:site_name" content="Jason Kim" />
-  <meta property="og:image" content="https://github.com/miknosaj/miknosaj.github.io/blob/master/img/jason.png" />
+  <meta property="og:image" content="http://jasonkim.xyz/img/jason.png" />
   
   <!-- Twitter summary card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
   <meta name="twitter:title" content="Jaosn Kim" />
   <meta name="twitter:description" content="A product and UX design portfolio of works." />
-  <meta name="twitter:image" content="https://github.com/miknosaj/miknosaj.github.io/blob/master/img/jason.png" />
+  <meta name="twitter:image" content="http://jasonkim.xyz/img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
 <script>
