add updated link to ixda shortlist on loree page and add a comment asking people to vote

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Twitter summary card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
-  <meta name="twitter:title" content="Jaosn Kim" />
+  <meta name="twitter:title" content="Jason Kim" />
   <meta name="twitter:description" content="A product and UX design portfolio of works." />
   <meta name="twitter:image" content="http://jasonkim.xyz/img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
