universal font change for better unity and readability

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 </script>
 
 </head>
-<body class="bg-black near-white pt5-ns pt4">
+<body class="sans-serif bg-black near-white pt5-ns pt4">
   <div class="mw8 center cf z-1 relative">
        <div class="w-30-l fl-l tr-l ph3">
            <h1 class="show-first f2 fw7 mb0 mt1 pv2 pr6">
-               <a href="/">
-                   <img class="w4" src="img/logo.svg" alt="">
+               <a class="white no-underline" href="/">
+                   kim.json
                </a>
            </h1>
        </div>
@@ -52,8 +52,8 @@
            <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
        </ul>
    </div>
-   <div class="show-first pt7-l pb7-l pt5-m pb6-m pt4 pb5 ph4 overflow-hidden text-marquee">
-     <div id="marquee" class="f-headliner-ns f-headliner nowrap fw9 relative">jason jason jason jason jason</div>
+   <div class="show-first pb2-m pb4-l ph4 pb2 overflow-hidden text-marquee">
+     <div id="marquee" class="f-headliner-ns f-headliner nowrap fw7 relative">jason jason jason jason jason</div>
    </div>
     <div class="mw8 center">
     <main class="cf relative z-1">
@@ -63,7 +63,7 @@
           <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
           <p class="show-second mt0 f4-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
           <p class="show-third mt0 f4-l f4-ns f5 lh-copy light-silver">
-            <a class="link red bb" href="work/about.html">But who the heck is Jason Kim?</a>
+            <a class="link light-blue hover-blue bb" href="work/about.html">But who the heck is Jason Kim?</a>
           </p>
         </section>
       </div>
