--- a/work/about.html
+++ b/work/about.html
@@ -20,7 +20,7 @@
     gtag('config', 'UA-111680878-1');
   </script>
 </head>
-<body class="bg-black white">
+<body class="sans-serif  bg-black white">
   <main class="cf pa3 pa4-m pa5-l mw9 center">
     <div class="fr w-100 w-80-l">
       <a class="f6 link white no-underline" href="../index.html">
