--- a/work/loree.html
+++ b/work/loree.html
@@ -20,7 +20,7 @@
     gtag('config', 'UA-111680878-1');
   </script>
 </head>
-<body class="bg-black near-white">
+<body class="sans-serif  bg-black near-white">
   <main>
     <article class="pa4">
       <a class="show-first f6 link white no-underline measure center" href="../index.html">
@@ -32,7 +32,7 @@
         I worked alongside a small team of designers at <a class="white" href="http://www.momentdesign.com/">Moment</a> from user research to product design. We designed for Voice UI’s and how they might be used to empower immigrant families and parents to raise their children to be multilingual in a culturally immersive home.
       </p>
       <blockquote class="ph0 f4 f1-ns measure-narrow center">
-        <p class="show-first fw9 lh-copy lh-title-ns">How might Voice UI's be used as tools for learning and celebrating the values of our diverse cultures?
+        <p class="show-first fw6 lh-copy lh-title-ns">How might Voice UI's be used as tools for learning and celebrating the values of our diverse cultures?
         </p>
       </blockquote>
       <div class="f6 f5-ns lh-copy measure-wide center">
@@ -62,7 +62,7 @@
         <span style="background-image:url(../img/interview1.jpg);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
       <blockquote class="ph0 f4 f1-ns measure-narrow center">
-        <p class="show-first fw9 lh-copy lh-title-ns">A solution can only be as good as the understanding of the problem.</p>
+        <p class="show-first fw6 lh-copy lh-title-ns">A solution can only be as good as the understanding of the problem.</p>
       </blockquote>
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
         In order to better define and come to understand our problem space, we interviewed a group of parents who would help us empathize with the many challenges that they face in parenting.
