--- a/work/medialets.html
+++ b/work/medialets.html
@@ -20,7 +20,7 @@
     gtag('config', 'UA-111680878-1');
   </script>
 </head>
-<body class="bg-black near-white">
+<body class="sans-serif bg-black near-white">
   <main>
     <article class="pa4">
       <a class="show-first f6 link white no-underline measure center" href="../index.html">
@@ -73,7 +73,7 @@
         The users are ad operation teams who manage and report on the performance of their online (mobile, in our case) advertisements.
       </p>
       <blockquote class="ph0 f5 f2-ns measure-narrow center">
-        <p class="show-first fw9 lh-copy lh-title-ns">Our platform's users are people who know exactly what they want out of a campaign and what variables they need to leverage in order to achieve their campaign goals.
+        <p class="show-first fw7 lh-copy lh-title-ns">Our platform's users are people who know exactly what they want out of a campaign and what variables they need to leverage in order to achieve their campaign goals.
         </p>
       </blockquote>
       <p class="show-first pt3 bb f6 f5-ns lh-copy measure-wide center">
