--- a/work/illustrations.html
+++ b/work/illustrations.html
@@ -19,7 +19,7 @@
     gtag('config', 'UA-111680878-1');
   </script>
 </head>
-<body class="bg-black near-white">
+<body class="sans-serif bg-black near-white">
   <main>
     <article class="cf pa3 mw9 center">
       <header class="show-first fl w-100 w-50-l pa3-m pa4-l mb2 mb3-l">
