update nav bar and add animation to waving hand on index page

--- a/work/about.html
+++ b/work/about.html
@@ -35,9 +35,10 @@
     </div>
     <div class="f6 lh-copy fl w-100 mb4">
       <div class="show-fourth fl-ns w-100 w-20-l pr3-m pr5-l">
-        <p>
+        <p class="mb0">
           NYC based<br class="dn db-l"> Product & UX Designer
         </p>
+        <a class="link bb white" href="../img/jasonkim-resume.pdf" target="_blank">résumé</a>
       </div>
       <div class="show-second fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
