--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
            </h1>
        </div>
        <ul class="show-second w-70-l fl-l list ph3 f4-ns mv3">
-           <li class="dib mr5-ns mr4"><a class="link bb white" href="img/jasonkim-resume.pdf" target="_blank">résumé</a></li>
-           <li class="dib mr5-ns mr4"><a class="link bb white" href="https://instagram.com/kim.json" target="_blank">instagram</a></li>
-           <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
+         <li class="dib mr5-ns mr4"><a class="link bb dim white" href="work/about.html">about</a></li>
+         <li class="dib"><a class="link bb dim white" href="#contact">contact</a></li>
        </ul>
    </div>
-   <div class="show-first pb2-m pb4-l ph4 pb2 overflow-hidden text-marquee">
-     <div id="marquee" class="f-headliner-ns f-headliner nowrap fw7 relative">jason jason jason jason jason</div>
+   <div class="show-first pb6-l pt4-l ph4 pb2 pt2 overflow-hidden text-banner">
+     <div id="banner" class="f-headliner-ns f-headliner nowrap fw7 relative">jason jason jason jason jason</div>
    </div>
     <div class="mw8 center">
     <main class="cf relative z-1">
@@ -112,7 +111,8 @@
       </div>
       <div id="contact" class="show-second mt0 cf ph3-l pt0 pb5">
         <div class="w-30-l fl-l ph3">
-          <h2 class="pv3 fw7 f3-l f3-ns f4 lh-title mt0 light-silver">Say Hi 👋</h2>
+          <h2 class="pv3 fw7 f3-l f3-ns f4 lh-title mt0 light-silver">Say Hi</h2>
+          <h2 class="pv0 mv0" id="wavehi">👋</h2>
         </div>
         <div class="w-70-l fr-l">
           <div class="flex flex-wrap f3 fw5 lh-title">
