--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        </div>
        <ul class="show-second w-70-l fl-l list ph3 f4-ns mv3">
          <li class="dib mr5-ns mr4"><a class="link bb dim white" href="work/about.html">about</a></li>
-         <li class="dib"><a class="link bb dim white" href="#contact">contact</a></li>
+         <li class="dib fr"><a class="link bb dim white" href="#contact">contact</a></li>
        </ul>
    </div>
    <div class="show-first pb6-l pt4-l ph4 pb2 pt2 overflow-hidden text-banner">
