fix key learnings on servo page

--- a/work/medialets.html
+++ b/work/medialets.html
@@ -219,9 +219,9 @@
       <h2 class="show-first pb3 yellow fs4 f4 f1-ns bb measure-narrow center">🔑 takeaways</h2>
 
       <ul class="show-first f6 f5-ns lh-copy measure-wide center">
-        <li>Compartmentalize the alerts starting with what kind of alerts they are.</li>
-        <li>Further compartmentalize by the ad campaigns that the alerts are referring to.</li>
-        <li>Organize the alerts by their level of importance.</li>
+        <li>Understand the context (when, why, how) for users and their goals.</li>
+        <li>Compartmentalization of data is the best way to tackle large amounts of information in order to make it quicker for users to digest. </li>
+        <li>An interactive interface with customizability can still be structured and organized to guide users without overwhelming them.</li>
       </ul>
     </article>
 
