update about page

--- a/work/about.html
+++ b/work/about.html
@@ -42,12 +42,15 @@
       </div>
       <div class="show-second fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
-          I use design to help foster better relationships between people and their experiences.
+          I use design to foster meaniningful relationships between people and their experiences.
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
           Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a> in NYC
+        </p>
+        <p>
+          Currently @ <a class="link white bb" href="http://www.intrepid.io/">Intrepid</a> in Cambridge, MA
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
