--- a/work/loree.html
+++ b/work/loree.html
@@ -36,7 +36,8 @@
         </p>
       </blockquote>
       <div class="f6 f5-ns lh-copy measure-wide center">
-        <div class="w-30 w-30-ns"><a class="show-first" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-peopleschoice.png"></img></a></div>
+        <a class="show-first light-blue" href="https://ixda.secure-platform.com/a/gallery/rounds/2/details/353">Please vote for us for the 2018 people's choice awards!</p>
+        <div class="w-30 w-20-ns"><a class="show-first" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-shortlist.png"></img></a></div>
         <div class="show-second w- aspect-ratio aspect-ratio--16x9 mt0 mb4">
           <iframe src="https://player.vimeo.com/video/229846750?title=0&byline=0&portrait=0" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
