fix spacing on about

--- a/work/about.html
+++ b/work/about.html
@@ -48,9 +48,7 @@
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
           Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a> in NYC
-        </p>
-        <p>
-          Currently @ <a class="link white bb" href="http://www.intrepid.io/">Intrepid</a> in Cambridge, MA
+          <br class="dn db-l">Currently @ <a class="link white bb" href="http://www.intrepid.io/">Intrepid</a> in Cambridge, MA
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
