--- a/work/about.html
+++ b/work/about.html
@@ -47,8 +47,8 @@
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
-          Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a> in NYC
-          <br class="dn db-l">Currently @ <a class="link white bb" href="http://www.intrepid.io/">Intrepid</a> in Cambridge, MA
+          Currently @ <a class="link white bb" href="http://www.intrepid.io/">Intrepid</a> in Cambridge, MA
+          <br class="dn db-l">Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a> in NYC
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
