add portrait to about

--- a/work/about.html
+++ b/work/about.html
@@ -62,7 +62,7 @@
         </p>
       </div>
     </div>
-    <img src="../img/game.jpg" class="show-fourth db" alt="iceland"/>
+    <img src="../img/selfportrait.jpg" class="show-fourth db" alt="iceland"/>
   </main>
   <script src="../js/main.js"></script>
 </body>
