refine Loree page

--- a/work/loree-test.html
+++ b/work/loree-test.html
@@ -116,7 +116,7 @@
       <p class="show-first pt4-ns pt3 f6 f5-ns lh-copy measure-wide center">
         At this point in our process, several events reflected the beliefs of movement towards the suppression of cultural diversity in the United States. We were deeply troubled by what we were seeing in the news and asked ourselves, “How might we use design to stand up for our values in the celebration of culture in the United States?”. This led to a shift in the project’s focus towards helping immigrant families raise their children to be bilingual and stay connected to their native culture.
       </p>
-      <div class="show-first pb0 pb1-ns f6 f5-ns measure-wide center"><div class="aspect-ratio aspect-ratio--16x9">
+      <div class="show-first fs4 f4 f1-ns measure-narrow center"><div class="aspect-ratio aspect-ratio--16x9">
         <span style="background-image:url(../img/persona-cards.png);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
       <p class="show-first bb f6 f5-ns lh-copy measure-wide center">
@@ -143,7 +143,7 @@
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
         We also created a competitive analysis graph of products, services, and experiences that showed a clear gap in offerings for accessible and immersive language and cultural learning.
       </p>
-      <div class="show-first pb0 pb1-ns f6 f5-ns measure-wide center"><div class="aspect-ratio aspect-ratio--16x9">
+      <div class="show-first pv2 pv4-ns fs4 f4 f1-ns measure-narrow center"><div class="aspect-ratio aspect-ratio--16x9">
         <span style="background-image:url(../img/comp-analysis.jpg);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
       <p class="show-first pt3 bb f6 f5-ns lh-copy measure-wide center">
@@ -220,7 +220,7 @@
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
         Throughout history, stories were used to pass down culture and identity to future generations. It was a perfect fit.
       </p>
-      <div class="show-first pb0 pb1-ns f6 f5-ns measure-wide center"><div class="aspect-ratio aspect-ratio--16x9">
+      <div class="show-first pv2 pv4-ns fs4 f4 f1-ns measure-narrow center"><div class="aspect-ratio aspect-ratio--16x9">
         <span style="background-image:url(../img/sketchdesk.jpg);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
       <p class="show-first pt3 bb f6 f5-ns lh-copy measure-wide center">
