--- a/work/photography.html
+++ b/work/photography.html
@@ -28,7 +28,7 @@
           ← back
         </a>
         <h2 class="lh-title f3 b mt0">
-          Ducasse says to his friend Mallarmé, “You know, I’ve got a lot of good ideas for poems, but the poems are never very good.”
+          Degas says to his friend Mallarmé, “You know, I’ve got a lot of good ideas for poems, but the poems are never very good.”
           Mallarmé says, “Of course, you don’t make poems out of ideas, you make poems out of words.
         </h2>
       </header>
