change some wording on home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta property="og:url" content="http://jasonkim.xyz/" />
   <meta property="og:site_name" content="Jason Kim" />
   <meta property="og:image" content="http://jasonkim.xyz/img/jason.png" />
-  
+
   <!-- Twitter summary card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
@@ -57,8 +57,8 @@
     <main class="cf relative z-1">
       <div class="cf ph3-l pt0-l pt3 pb5-ns pb3">
         <section class="fr w-100 w-100-m w-70-l cf ph3">
-          <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product + UX Designer</p>
-          <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
+          <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product Designer</p>
+          <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more thoughtful,</p>
           <p class="show-second mt0 f4-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
           <p class="show-third mt0 f4-l f4-ns f5 lh-copy light-silver">
             <a class="link light-blue hover-blue bb" href="work/about.html">But who the heck is Jason Kim?</a>
