changed more copy and edit font weight on work

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Jason Kim" />
-  <meta property="og:description" content="A product and UX design portfolio of works." />
+  <meta property="og:description" content="A product and UX design portfolio." />
   <meta property="og:url" content="http://jasonkim.xyz/" />
   <meta property="og:site_name" content="Jason Kim" />
   <meta property="og:image" content="http://jasonkim.xyz/img/jason.png" />
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
   <meta name="twitter:title" content="Jason Kim" />
-  <meta name="twitter:description" content="A product and UX design portfolio of works." />
+  <meta name="twitter:description" content="A product and UX design portfolio." />
   <meta name="twitter:image" content="http://jasonkim.xyz/img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
@@ -67,7 +67,7 @@
       </div>
       <div class="cf ph3-l pv5-ns pv3">
         <section class="show-second w-30-l fl-l ph3">
-          <h2 class="fw3 f3-l f3-ns f4 lh-title mt0 light-silver">Work 📚</h2>
+          <h2 class="fw7 f3-l f3-ns f4 lh-title mt0 light-silver">Work 📚</h2>
         </section>
         <section class="show-second cf ph2 ph0-l w-70-l fr-l mb3">
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
