--- a/work/about.html
+++ b/work/about.html
@@ -38,7 +38,7 @@
         <p class="mb0">
           NYC based<br class="dn db-l"> Product & UX Designer
         </p>
-        <a class="link bb white" href="../img/jasonkim-resume.pdf" target="_blank">résumé</a>
+        <a class="link bb white" href="../img/Jason-Kim_RESUME.pdf" target="_blank">résumé</a>
       </div>
       <div class="show-second fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
