add card and link for new project on index page

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
+              <a class="br4 db aspect-ratio--object cover" style="background:url(img/acaia.jpg) no-repeat center center"></a>
+            </div>
+            <p class="mt3 mb0 f6 light-blue">The Makings of a Coffee Master</p>
+            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
+              <a class="link white bb">Coming Soon!</a>
+            </h3>
+          </article>
+          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
+            <div class="aspect-ratio aspect-ratio--8x5 dim">
               <a class="br4 db aspect-ratio--object cover" href="work/medialets.html" style="background:url(img/medialets.jpg) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Data-Inspired User Experience</p>
