upate section maargins on loree page

--- a/work/loree.html
+++ b/work/loree.html
@@ -1,4 +1,4 @@
-<html>
+mb6-ns<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,7 @@
         <a class="f6 link dim ba ph3 pv2 mb2 dib light-blue" href="http://loree.momentdesign.com/">MEET LOREE</a>
         <a class="f6 link dim ba ph3 pv2 mb2 dib light-blue" href="https://medium.com/design-intelligence/why-a-better-future-for-voice-uis-matters-for-families-6a1e42d950c2">READ MY ARTICLE</a>
       </div>
-      <p class="f5 lh-copy measure mt0-ns mb5">
+      <p class="f5 lh-copy measure mt0-ns mb5 mb6-ns">
         Loree is an Artificially Intelligent companion that incorporates language through conversation and storytelling to introduce cultural concepts to children in immigrant families. As children grow older and their speech patterns become more complex, Loree helps expand their understanding of abstract concepts and ensures that parents are taking an active role in this learning process.
       </p>
     </div>
@@ -51,7 +51,7 @@
         Introduction
       </h1>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5">
+    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <p class="f5 lh-copy measure mt0-ns">
         Voice activated assistants are some of the hottest products in the smart-home market and yet, despite significant innovation in hardware, and the many talented developers that work on making them as 'smart' as they are, voice assistants are still remarkably irrelevant.
       </p>
@@ -67,7 +67,7 @@
         A solution can only be as good as your understanding of the problem.
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5">
+    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow mb4-ns"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/interview1.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -129,7 +129,7 @@
         How might we use design to stand up for our values in the celebration of culture in the United States?
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5">
+    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/synthesis1.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -192,7 +192,7 @@
         We recruited Moment designers for a design sprint to ideate, evaluate, and validate on concepts.
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5">
+    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/diverge1.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -246,7 +246,7 @@
         We used this opportunity to refine our value proposition to help us reorient and organize the parent and child needs that we had to address.
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5">
+    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/converge1.png);" class="cover bg-center aspect-ratio--object"></span>
@@ -309,7 +309,7 @@
         Design
       </h1>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5">
+    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-third-l pr4-l">
         <div class="fs4 f6 f5-ns measure-wide"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/emotion-tests.png);" class="cover bg-center aspect-ratio--object"></span>
