--- a/work/acaia.html
+++ b/work/acaia.html
@@ -22,16 +22,16 @@
 </head>
 <body class="sans-serif  bg-black near-white">
   <article class="cf ph3 ph5-ns pv5">
-  <header class="fn fl-ns w-40-ns pr4-ns">
+  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
     <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
       The Makings of a Coffee Master
     </h1>
     <h2 class="f3 mid-gray lh-title">
-      Designing an app that helps people make coffee by leveraging new data.
+      Helping people leverage their data to make a great cup of coffee.
     </h2>
-    <time class="f6 ttu tracked gray">Sometime before 1967</time>
-  </header>
-  <div class="fn fl-ns w-60-ns">
+    <time class="f6 ttu tracked gray">2018</time>
+  </div>
+  <div class="fn fl-ns w-70-l w-50-ns mb5">
     <p class="f5 lh-copy measure mt0-ns">
       TYPOGRAPHY, even when poorly executed, can never be taken for granted;
       nor is it ever accidental. Indeed, beauti- fully typeset pages are always
@@ -45,6 +45,107 @@
       something can be read with ease, but the average reader will rebel at
       once when the type is too small or otherwise irritates the eye; both are
       signs of a certain illegibility already.
+    </p>
+    <p class="f5 lh-copy measure">
+      All typography consists of letters. These appear either in the form of a
+      smoothly running sentence or as an assembly of lines, which may even have
+      contrasting shapes. Good typog- raphy begins, and this is no minor
+      matter, with the typeset- ting of a single line of text in a book or a
+      newspaper. Using exactly the same typeface, it is possible to create either
+      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
+      or too compressed, will spoil almost any typeface.
+    </p>
+  </div>
+  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
+    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+      Understand & Build Context
+    </h1>
+    <h2 class="f3 mid-gray lh-title">
+      A solution can only be as good as your understanding of the problem.
+    </h2>
+  </div>
+  <div class="fn fl-ns w-70-l w-50-ns mb5">
+    <p class="f5 lh-copy measure mt0-ns">
+      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
+      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
+      the result of long experience. Now and then they even attain the rank of
+      great artistic achievement. But the art of typesetting stands apart from
+      ex- pressive artwork, because the appeal is not limited to a small
+    </p>
+    <p class="f5 lh-copy measure">
+      All typography consists of letters. These appear either in the form of a
+      smoothly running sentence or as an assembly of lines, which may even have
+      contrasting shapes. Good typog- raphy begins, and this is no minor
+      matter, with the typeset- ting of a single line of text in a book or a
+      newspaper. Using exactly the same typeface, it is possible to create either
+      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
+      or too compressed, will spoil almost any typeface.
+    </p>
+  </div>
+  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
+    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+      Define the Problem
+    </h1>
+    <h2 class="f3 mid-gray lh-title">
+      Solve the right problem before you solve the problem right.
+    </h2>
+  </div>
+  <div class="fn fl-ns w-70-l w-50-ns mb5">
+    <p class="f5 lh-copy measure mt0-ns">
+      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
+      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
+      the result of long experience. Now and then they even attain the rank of
+      great artistic achievement. But the art of typesetting stands apart from
+      ex- pressive artwork, because the appeal is not limited to a small
+    </p>
+    <p class="f5 lh-copy measure">
+      All typography consists of letters. These appear either in the form of a
+      smoothly running sentence or as an assembly of lines, which may even have
+      contrasting shapes. Good typog- raphy begins, and this is no minor
+      matter, with the typeset- ting of a single line of text in a book or a
+      newspaper. Using exactly the same typeface, it is possible to create either
+      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
+      or too compressed, will spoil almost any typeface.
+    </p>
+  </div>
+  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
+    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+      Build Empathy
+    </h1>
+    <h2 class="f3 mid-gray lh-title">
+      We can build empathy in three ways.
+    </h2>
+  </div>
+  <div class="fn fl-ns w-70-l w-50-ns mb5">
+    <p class="f5 lh-copy measure mt0-ns">
+      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
+      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
+      the result of long experience. Now and then they even attain the rank of
+      great artistic achievement. But the art of typesetting stands apart from
+      ex- pressive artwork, because the appeal is not limited to a small
+    </p>
+    <p class="f5 lh-copy measure">
+      All typography consists of letters. These appear either in the form of a
+      smoothly running sentence or as an assembly of lines, which may even have
+      contrasting shapes. Good typog- raphy begins, and this is no minor
+      matter, with the typeset- ting of a single line of text in a book or a
+      newspaper. Using exactly the same typeface, it is possible to create either
+      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
+      or too compressed, will spoil almost any typeface.
+    </p>
+  </div>
+  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
+    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+      Design
+    </h1>
+  </div>
+  <div class="fn fl-ns w-70-l w-50-ns mb5">
+    <p class="f5 lh-copy measure mt0-ns">
+      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
+      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
+      the result of long experience. Now and then they even attain the rank of
+      great artistic achievement. But the art of typesetting stands apart from
+      ex- pressive artwork, because the appeal is not limited to a small
     </p>
     <p class="f5 lh-copy measure">
       All typography consists of letters. These appear either in the form of a
