--- a/work/acaia.html
+++ b/work/acaia.html
@@ -84,13 +84,18 @@
   </div>
   <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
     <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      Define the Problem
+      Build Empathy
     </h1>
     <h2 class="f3 mid-gray lh-title">
-      Solve the right problem before you solve the problem right.
+      Empathy helps us understand the perspectives of people who are different from us.
     </h2>
   </div>
   <div class="fn fl-ns w-70-l w-50-ns mb5">
+    <div class="w-two-thirds-l pr4-l">
+      <div class="fs4 f4 f1-ns measure-narrow mb4-ns"><div class="aspect-ratio aspect-ratio--6x4">
+        <span style="background-image:url(../img/empathy.gif);" class="cover bg-center aspect-ratio--object"></span>
+      </div></div>
+    </div>
     <p class="f5 lh-copy measure mt0-ns">
       TYPOGRAPHY, even when poorly executed, can never be taken for granted;
       nor is it ever accidental. Indeed, beauti- fully typeset pages are always
@@ -110,10 +115,10 @@
   </div>
   <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
     <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      Build Empathy
+      Define the Problem
     </h1>
     <h2 class="f3 mid-gray lh-title">
-      We can build empathy in three ways.
+      Solve the right problem before you solve the problem right.
     </h2>
   </div>
   <div class="fn fl-ns w-70-l w-50-ns mb5">
