--- a/work/acaia.html
+++ b/work/acaia.html
@@ -24,144 +24,30 @@
   <article class="cf ph3 ph5-ns pv5">
   <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
     <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      The Makings of a Coffee Master
+      Acaia — The Makings of a Coffee Master
     </h1>
     <h2 class="f3 mid-gray lh-title">
-      Helping people leverage their data to make a great cup of coffee.
+      How might Acaia app users become masters of brewing pourovers without adding stress to their morning routine?
     </h2>
     <time class="f6 ttu tracked gray">2018</time>
   </div>
   <div class="fn fl-ns w-70-l w-50-ns mb5">
-    <p class="f5 lh-copy measure mt0-ns">
-      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-      the result of long experience. Now and then they even attain the rank of
-      great artistic achievement. But the art of typesetting stands apart from
-      ex- pressive artwork, because the appeal is not limited to a small
-      circle. It is open to everyone's critical judgment, and nowhere does this
-      judgment carry more weight. Typography that can- not be read by everybody
-      is useless. Even for someone who constantly ponders matters of
-      readability and legibility, it is difficult to determine whether
-      something can be read with ease, but the average reader will rebel at
-      once when the type is too small or otherwise irritates the eye; both are
-      signs of a certain illegibility already.
-    </p>
-    <p class="f5 lh-copy measure">
-      All typography consists of letters. These appear either in the form of a
-      smoothly running sentence or as an assembly of lines, which may even have
-      contrasting shapes. Good typog- raphy begins, and this is no minor
-      matter, with the typeset- ting of a single line of text in a book or a
-      newspaper. Using exactly the same typeface, it is possible to create either
-      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-      or too compressed, will spoil almost any typeface.
-    </p>
-  </div>
-  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
-    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      Understand & Build Context
-    </h1>
-    <h2 class="f3 mid-gray lh-title">
-      A solution can only be as good as your understanding of the problem.
-    </h2>
-  </div>
-  <div class="fn fl-ns w-70-l w-50-ns mb5">
-    <p class="f5 lh-copy measure mt0-ns">
-      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-      the result of long experience. Now and then they even attain the rank of
-      great artistic achievement. But the art of typesetting stands apart from
-      ex- pressive artwork, because the appeal is not limited to a small
-    </p>
-    <p class="f5 lh-copy measure">
-      All typography consists of letters. These appear either in the form of a
-      smoothly running sentence or as an assembly of lines, which may even have
-      contrasting shapes. Good typog- raphy begins, and this is no minor
-      matter, with the typeset- ting of a single line of text in a book or a
-      newspaper. Using exactly the same typeface, it is possible to create either
-      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-      or too compressed, will spoil almost any typeface.
-    </p>
-  </div>
-  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
-    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      Build Empathy
-    </h1>
-    <h2 class="f3 mid-gray lh-title">
-      Empathy helps us understand the perspectives of people who are different from us.
-    </h2>
-  </div>
-  <div class="fn fl-ns w-70-l w-50-ns mb5">
     <div class="w-two-thirds-l pr4-l">
-      <div class="fs4 f4 f1-ns measure-narrow mb4-ns"><div class="aspect-ratio aspect-ratio--6x4">
+      <div class="fs4 f4 f1-ns measure-narrow mv4 mt0-ns"><div class="aspect-ratio aspect-ratio--6x4">
+        <span style="background-image:url(../img/brewclue.jpg);" class="cover bg-center aspect-ratio--object"></span>
+      </div></div>
+    </div>
+    <p class="f3 fw7 lh-copy measure mt0-ns">
+      I'm still working on this writeup, but I'm more than happy to share what I did and my process!
+    </p>
+    <p class="f5 lh-copy measure">
+      This was a project aimed at redesigning the current mobile application built for the <a class="link dim gray" href="https://acaia.co/">Acaia</a> scale. I designed the new application not only with better a UX in mind, but in designing how the app could be better suited for novice coffee makers and helping them master the craft of making pourovers.
+    </p>
+    <div class="w-two-thirds-l pr4-l">
+      <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--6x4">
         <span style="background-image:url(../img/empathy.gif);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
     </div>
-    <p class="f5 lh-copy measure mt0-ns">
-      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-      the result of long experience. Now and then they even attain the rank of
-      great artistic achievement. But the art of typesetting stands apart from
-      ex- pressive artwork, because the appeal is not limited to a small
-    </p>
-    <p class="f5 lh-copy measure">
-      All typography consists of letters. These appear either in the form of a
-      smoothly running sentence or as an assembly of lines, which may even have
-      contrasting shapes. Good typog- raphy begins, and this is no minor
-      matter, with the typeset- ting of a single line of text in a book or a
-      newspaper. Using exactly the same typeface, it is possible to create either
-      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-      or too compressed, will spoil almost any typeface.
-    </p>
   </div>
-  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
-    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      Define the Problem
-    </h1>
-    <h2 class="f3 mid-gray lh-title">
-      Solve the right problem before you solve the problem right.
-    </h2>
-  </div>
-  <div class="fn fl-ns w-70-l w-50-ns mb5">
-    <p class="f5 lh-copy measure mt0-ns">
-      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-      the result of long experience. Now and then they even attain the rank of
-      great artistic achievement. But the art of typesetting stands apart from
-      ex- pressive artwork, because the appeal is not limited to a small
-    </p>
-    <p class="f5 lh-copy measure">
-      All typography consists of letters. These appear either in the form of a
-      smoothly running sentence or as an assembly of lines, which may even have
-      contrasting shapes. Good typog- raphy begins, and this is no minor
-      matter, with the typeset- ting of a single line of text in a book or a
-      newspaper. Using exactly the same typeface, it is possible to create either
-      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-      or too compressed, will spoil almost any typeface.
-    </p>
-  </div>
-  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
-    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      Design
-    </h1>
-  </div>
-  <div class="fn fl-ns w-70-l w-50-ns mb5">
-    <p class="f5 lh-copy measure mt0-ns">
-      TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-      nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-      the result of long experience. Now and then they even attain the rank of
-      great artistic achievement. But the art of typesetting stands apart from
-      ex- pressive artwork, because the appeal is not limited to a small
-    </p>
-    <p class="f5 lh-copy measure">
-      All typography consists of letters. These appear either in the form of a
-      smoothly running sentence or as an assembly of lines, which may even have
-      contrasting shapes. Good typog- raphy begins, and this is no minor
-      matter, with the typeset- ting of a single line of text in a book or a
-      newspaper. Using exactly the same typeface, it is possible to create either
-      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-      or too compressed, will spoil almost any typeface.
-    </p>
-  </div>
-</article>
 </body>
 </html>
