add fade in animations to loree and acaia pages

--- a/work/loree.html
+++ b/work/loree.html
@@ -22,7 +22,7 @@
 </head>
 <body class="sans-serif  bg-black near-white">
   <article class="mcf ph3 ph5-ns pv5">
-    <div class="fn fl-ns w-20-l w-50-ns pr4-ns">
+    <div class="show-first fn fl-ns w-20-l w-50-ns pr4-ns">
       <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
         Loree
       </h1>
@@ -32,7 +32,7 @@
       <div class="w-30 w-50-ns"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-shortlist.png"></img></a></div>
       <div class="w-30 w-50-ns mt2"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-peopleschoice.png"></img></a></div>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns">
+    <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns">
       <div class="w-two-thirds-l mb4-ns">
         <div class="aspect-ratio aspect-ratio--16x9 mt0">
           <iframe src="https://player.vimeo.com/video/229846750?title=0&byline=0&portrait=0" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -51,7 +51,7 @@
         Introduction
       </h1>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
+    <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <p class="f5 lh-copy measure mt0-ns">
         Voice activated assistants are some of the hottest products in the smart-home market and yet, despite significant innovation in hardware, and the many talented developers that work on making them as 'smart' as they are, voice assistants are still remarkably irrelevant.
       </p>
@@ -59,7 +59,7 @@
         Even now, most voice assistants follow a command/response paradigm that is only working to streamline screen-based navigation. Our team wanted to go beyond that paradigm and design a voice UI that looked at voice in a new way and took its strengths into account by highlighting conversation as a unique and humanized interaction.
       </p>
     </div>
-    <div class="fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
+    <div class="show-second fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
       <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
         User Research
       </h1>
@@ -67,7 +67,7 @@
         A solution can only be as good as your understanding of the problem.
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
+    <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow mb4-ns"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/interview1.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -76,7 +76,7 @@
           In order to better define and come to understand our problem space, we interviewed a group of parents who would help us empathize with the many challenges that they face in parenting.
         </p>
       </div>
-      <div class="fn fl-ns w-third-l pr4-l">
+      <div class="show-second fn fl-ns w-third-l pr4-l">
         <p class="pt3 bb f6 f5-ns lh-copy measure-wide">
           Obstacles
         </p>
@@ -87,7 +87,7 @@
           In our interview dry-runs, parents had trouble recalling past experiences when asked up-front, but would bring them up while talking about a related topic. We needed a better way to get parents to recall their experiences without making them feel too pressured.
         </p>
       </div>
-      <div class="fn fl-ns w-third-l pr4-l">
+      <div class="show-second fn fl-ns w-third-l pr4-l">
         <p class="pt3 bb f6 f5-ns lh-copy measure">
           Solution
         </p>
@@ -101,7 +101,7 @@
           <span style="background-image:url(../img/interview2.jpg);" class="cover bg-center aspect-ratio--object"></span>
         </div></div>
       </div>
-      <div class="fn fl-ns w-third-l pr4-l">
+      <div class="show-second fn fl-ns w-third-l pr4-l">
         <p class="pt3 bb f6 f5-ns lh-copy measure">
           Why?
         </p>
@@ -121,7 +121,7 @@
         </p>
       </div>
     </div>
-    <div class="fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
+    <div class="show-second fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
       <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
         Synthesis
       </h1>
@@ -129,7 +129,7 @@
         How might we use design to stand up for our values in the celebration of culture in the United States?
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
+    <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/synthesis1.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -184,7 +184,7 @@
         </p>
       </div>
     </div>
-    <div class="fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
+    <div class="show-second fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
       <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
         Diverge
       </h1>
@@ -192,7 +192,7 @@
         We recruited Moment designers for a design sprint to ideate, evaluate, and validate on concepts.
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
+    <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/diverge1.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -238,7 +238,7 @@
         </p>
       </div>
     </div>
-    <div class="fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
+    <div class="show-second fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
       <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
         Converge
       </h1>
@@ -246,7 +246,7 @@
         We used this opportunity to refine our value proposition to help us reorient and organize the parent and child needs that we had to address.
       </h2>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
+    <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-two-thirds-l pr4-l">
         <div class="fs4 f4 f1-ns measure-narrow"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/converge1.png);" class="cover bg-center aspect-ratio--object"></span>
@@ -304,12 +304,12 @@
         </p>
       </div>
     </div>
-    <div class="fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
+    <div class="show-second fn fl-ns w-20-l w-50-ns pr4-ns mb-5">
       <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
         Design
       </h1>
     </div>
-    <div class="fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
+    <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns mb5 mb6-ns">
       <div class="w-third-l pr4-l">
         <div class="fs4 f6 f5-ns measure-wide"><div class="aspect-ratio aspect-ratio--16x9">
           <span style="background-image:url(../img/emotion-tests.png);" class="cover bg-center aspect-ratio--object"></span>
@@ -344,5 +344,6 @@
       </div>
     </div>
   </article>
+  <script src="../js/main.js"></script>
 </body>
 </html>
