--- a/work/acaia.html
+++ b/work/acaia.html
@@ -21,8 +21,8 @@
   </script>
 </head>
 <body class="sans-serif  bg-black near-white">
-  <article class="cf ph3 ph5-ns pv5">
-  <div class="fn fl-ns w-30-l w-50-ns pr4-ns">
+  <div class="cf ph3 ph5-ns pv5">
+  <div class="show-first fn fl-ns w-30-l w-50-ns pr4-ns">
     <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
       Acaia — The Makings of a Coffee Master
     </h1>
@@ -31,7 +31,7 @@
     </h2>
     <time class="f6 ttu tracked gray">2018</time>
   </div>
-  <div class="fn fl-ns w-70-l w-50-ns mb5">
+  <div class="show-second fn fl-ns w-70-l w-50-ns mb5">
     <div class="w-two-thirds-l pr4-l">
       <div class="fs4 f4 f1-ns measure-narrow mv4 mt0-ns"><div class="aspect-ratio aspect-ratio--6x4">
         <span style="background-image:url(../img/brewclue.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -49,5 +49,7 @@
       </div></div>
     </div>
   </div>
+  </article>
+  <script src="../js/main.js"></script>
 </body>
 </html>
