change my headline

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
   <meta name="twitter:title" content="Jason Kim" />
-  <meta name="twitter:description" content="A product and UX design portfolio." />
+  <meta name="twitter:description" content="Trying to make products more thoughtful, one honest conversation at a time ❤️" />
   <meta name="twitter:image" content="http://jasonkim.xyz/img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
@@ -59,7 +59,7 @@
       <div class="cf ph3-l pt0-l pt3 pb5-ns pb3">
         <section class="fr w-100 w-100-m w-70-l cf ph3">
           <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product Designer</p>
-          <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more thoughtful,</p>
+          <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make products more thoughtful,</p>
           <p class="show-second mt0 f4-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
           <p class="show-third mt0 f4-l f4-ns f5 lh-copy light-silver">
             <a class="link light-blue hover-blue bb" href="work/about.html">But who the heck is Jason Kim?</a>
