--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="aspect-ratio aspect-ratio--8x5 dim">
               <a class="br4 db aspect-ratio--object cover" style="background:url(img/speakeazyMC.gif) no-repeat center center"></a>
             </div>
-            <p class="mt3 mb0 f6 light-blue">Opening Communication Channels for Company Meetings</p>
+            <p class="mt3 mb0 f6 light-blue">Empowering Communication for Meetings</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
               <a class="link white bb">Speakeazy (Work in Progress!)</a>
             </h3>
