--- a/work/speakeazy.html
+++ b/work/speakeazy.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jason Kim - Acaia</title>
+  <title>Jason Kim - Speakeazy</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
   <link rel="stylesheet" href="../css/custom.css"/>
   <link rel="apple-touch-icon" sizes="152x152" href="../favicons/apple-touch-icon.png?v=2">
@@ -40,9 +40,8 @@
     <p class="f3 fw7 lh-copy measure mt0-ns">
       I'm still working on this writeup, but I'm more than happy to share what I did and my process!
     </p>
-    <a class="f6 link dim ba ph3 pv2 mb2 dib light-blue" href="../img/Acaia-App_Jason.pdf">PROCESS DECK</a>
     <p class="f5 lh-copy measure">
-      This was a project aimed at redesigning the current mobile application built for the <a class="link dim gray" href="https://acaia.co/">Acaia</a> scale. I designed the new application not only with a better UX in mind, but in designing how the app could be better suited for novice coffee makers and helping them master the craft of making pourovers.
+      This was a project aimed at redesigning the current mobile application built for the <a class="link dim gray" href="https://acaia.co/">Acaia</a> scale. I designed the new application not only with better a UX in mind, but in designing how the app could be better suited for novice coffee makers and helping them master the craft of making pourovers.
     </p>
     <div class="w-two-thirds-l pr4-l">
       <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--6x4">
